# drone_vlm_golden_eval

./: .env.example  .gitignore  README.md  demo.py  pyproject.toml  viewer.py  workshop-summary.md
drone_vlm_eval/: __init__.py  augmentation.py  checks.py  config.py  coverage.py  dataset.py  download.py  image_io.py  schemas.py  vlm_connector.py  vlm_curation.py  vlm_eval.py
